5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1789_1620.log
== TEST (2019-05-29 18:18:37) 
-- CODE:
from numpy import*

v=array(eval/input(" consumo de agua"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:01) 
-- CODE:
from numpy import*

v=array(eval/input(" consumo de agua"))
quant=array(eval/input("litros por semana"))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
cont=0

while(cont < size(v)):
	if(v[cont].upper ==segunda)
	segunda=segunda+quant[cont]*2.5
	
-- ERROR:
File "XXXX", line 13
    if(v[cont].upper ==segunda)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:28:06) 
-- CODE:
from numpy import*

v=array(eval/input(" consumo de agua"))
quant=array(eval/input("litros por semana"))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
cont=0

while(cont < size(v)):
	if(v[cont].upper == segunda):
	segunda=segunda+quant[cont] * 2.5
	if(v[cont] .upper == terca):
		terca=terca+quant[cont] * 2.5
	if(v[cont] .upper == quarta):
		quarta=quarta+quant[cont] * 2.5
	if(v[cont] . upper ==quinta):
		quinta=quinta+quant[cont] * 2.5
	if(v[cont] . upper == sexta):
		sexta= sexta+quant[cont] *2.5
		
cont= segunda+terca+quarta+quinta+sexta
print()
-- ERROR:
File "XXXX", line 14
    segunda=segunda+quant[cont] * 2.5
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:29:31) 
-- CODE:
from numpy import*

v=array(eval/input(" consumo de agua"))
quant=array(eval/input("litros por semana"))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
cont=0

while(cont < size(v)):
	if(v[cont].upper == segunda):
	segunda=segunda+quant[cont] * 2.5
	if(v[cont] .upper == terca):
		terca=terca+quant[cont] * 2.5
	if(v[cont] .upper == quarta):
		quarta=quarta+quant[cont] * 2.5
	if(v[cont] . upper ==quinta):
		quinta=quinta+quant[cont] * 2.5
	if(v[cont] . upper == sexta):
		sexta= sexta+quant[cont] *2.5
		
cont= segunda+terca+quarta+quinta+sexta
print()
-- EXECUTION TIME:
0.192633
-- ERROR:
  File "/home/codebench/codes/1789/1620/main.py", line 14
    segunda=segunda+quant[cont] * 2.5
          ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:37:51) 
-- CODE:
from numpy import*

v=array(eval/input(" consumo de agua"))
quant=array(eval/input("litros por semana"))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
cont=0

while(cont < size(v)):
	
	if(v[cont].upper == segunda):
	segunda=segunda+quant[cont] * 2.5
	if(v[cont] .upper == terca):
		terca=terca+quant[cont] * 2.5
	if(v[cont] .upper == quarta):
		quarta=quarta+quant[cont] * 2.5
	if(v[cont] . upper ==quinta):
		quinta=quinta+quant[cont] * 2.5
	if(v[cont] . upper == sexta):
		sexta= sexta+quant[cont] *2.5
		
cont= segunda+terca+quarta+quinta+sexta
d=(quant/v)**2
print(round(d,2))
-- ERROR:
File "XXXX", line 15
    segunda=segunda+quant[cont] * 2.5
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:16) 
-- CODE:
from numpy import*

v=array(eval/input(" consumo de agua"))
quant=array(eval/input("litros por semana"))
segunda=0
terca=0
quarta=0
quinta=0
sexta=0
cont=0

while(cont < size(v)):
	
	if(v[cont].upper == segunda):
	segunda=segunda+quant[cont] * 5
	if(v[cont] .upper == terca):
		terca=terca+quant[cont] * 5
	if(v[cont] .upper == quarta):
		quarta=quarta+quant[cont] * 5
	if(v[cont] . upper ==quinta):
		quinta=quinta+quant[cont] * 5
	if(v[cont] . upper == sexta):
		sexta= sexta+quant[cont] * 5
		
cont= segunda+terca+quarta+quinta+sexta
d=(quant/v)**2
print(round(d,2))
-- ERROR:
File "XXXX", line 15
    segunda=segunda+quant[cont] * 5
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
